Style fixes
* The loading- and error screens no longer appear below the arrow buttons of the tool menu

--- a/projects/toolbox-main/src/app/common/elements/activity-monitor/activity-monitor.component.scss
+++ b/projects/toolbox-main/src/app/common/elements/activity-monitor/activity-monitor.component.scss
@@ -7,7 +7,7 @@
 
 :host,
 .container {
-	z-index: 1;
+	z-index: 2;
 	position: fixed;
 	top: 0;
 	left: 0;
