--- a/projects/toolbox-main/src/app/common/elements/error-handler/error-handler.component.scss
+++ b/projects/toolbox-main/src/app/common/elements/error-handler/error-handler.component.scss
@@ -5,7 +5,7 @@
 	will-change: transform;
 	overflow-x: hidden;
 	overflow-y: auto;
-	z-index: 1;
+	z-index: 2;
 	position: fixed;
 	top: 0;
 	left: 0;
